Make a few small edits